--- a/style.scss
+++ b/style.scss
@@ -818,10 +818,12 @@ nav{
 @media only screen and (min-width: 300px) {
   body{
     width: 100vw;
+    overflow-x: hidden;
+    position: relative;
   }
 
   .intro{
-    width: 100vw;
+    width: 100%;
   }
 
   .intro h1{
@@ -838,6 +840,7 @@ nav{
   }
 
   .body-canvas{
+    
     width: 100%;
   }
 
